--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "server",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -12,5 +11,15 @@
     "axios": "^0.27.2",
     "cors": "^2.8.5",
     "express": "^4.18.1"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/BlueSlime99/servercompiler.git"
+  },
+  "keywords": [],
+  "bugs": {
+    "url": "https://github.com/BlueSlime99/servercompiler/issues"
+  },
+  "homepage": "https://github.com/BlueSlime99/servercompiler#readme",
+  "description": ""
 }
