--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "url": "https://github.com/BlueSlime99/servercompiler/issues"
   },
   "homepage": "https://github.com/BlueSlime99/servercompiler#readme",
-  "description": ""
+  "description": "",
+  "devDependencies": {
+    "webpack-cli": "^3.3.12"
+  }
 }
